--- a/Get Jobs/IT互联网行业/临时笔记.md
+++ b/Get Jobs/IT互联网行业/临时笔记.md
@@ -1,1 +1,4 @@
 MySQL [21分钟 MySQL 入门教程](https://www.cnblogs.com/mr-wid/archive/2013/05/09/3068229.html)
+
+Python
+[公众号合集-Python数据科学](https://mp.weixin.qq.com/mp/appmsgalbum?__biz=MzIyODI1MzYyNA==&action=getalbum&album_id=1339178811027587075&scene=173&from_msgid=2653540344&from_itemidx=1&count=3&nolastread=1#wechat_redirect)
